// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateHtml default 1`] = `
"
		<html>
			<head>
        <title>CV</title>
    <meta name=\\"description\\" content=\\"CV made with cv-maker\\">

    <meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1,maximum-scale=2,shrink-to-fit=no\\">

    <link rel=\\"icon\\" href=\\"/favicon.ico\\" />

				<style>
					@media (prefers-color-scheme: light) {
  :root {
    --white: #ffffff;
    --primary-light: #8ee3c6;
    --primary: #437868;
    --primary-dark: #2e5a4d;
    --gray: #666;
    --black: #171d1b;
  }
}
@media (prefers-color-scheme: dark) {
  :root {
    --white: #18191a;
    --primary-light: #dda1b7;
    --primary: #dda1b7;
    --primary-dark: #dda1b7;
    --gray: #ccc;
    --black: #ffffff;
  }
}

html,
body {
  padding: 0;
  margin: 0;
  color: var(--black);
  background-color: var(--white);
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

* {
  box-sizing: border-box;
}

body {
  display: flex;
  align-items: center;
  justify-content: center;
}

h1,
h2,
h3,
h4,
p,
li {
  font-family: avenir next, helvetica, sans-serif;
  color: var(--black);
}

h1,
h2,
h3,
h4 {
}

h1 {
  margin: 0;
}

h1 + p {
  margin-top: 3px;
}

h2 {
  border-bottom: 2px solid var(--black);
  display: flex;
  margin-block-start: 1em;
  padding-bottom: 0.3em;
}

h3 {
  margin-block-start: 1em;
  color: var(--primary-dark);
}

h3 em {
  font-style: normal;
  font-weight: lighter;
}

h4 {
  color: var(--primary-dark);
  font-weight: normal;
}

h3,
h4 {
  margin-block-end: 3px;
}

h3 + p,
h3 + h4,
h4 + p {
  margin-block-start: 3px;
}

h3 + p {
  margin-block-end: 3px;
}

h3 + p + p {
  margin-block-start: 3px;
}

a {
  text-decoration: none;
  color: var(--primary);
}

a:hover {
  text-decoration: underline;
  opacity: 0.75;
}

em {
  color: var(--gray);
}

strong {
  color: var(--primary-dark);
}

blockquote {
  color: var(--primary-light);
}

hr {
  opacity: 0.2;
}

@page {
  margin: 0;
}

.pages.web {
  max-width: 700px;
}

.page {
  position: relative;
  box-sizing: border-box;
  overflow: hidden;
}

.pdf .page,
.debug .page {
  height: 279.4mm;
  width: 215.9mm;
  text-rendering: optimizeLegibility;
  page-break-before: always;
  page-break-after: always;
  padding: 1cm 1.7cm;
  padding-bottom: 1.5cm;
}

.debug .page {
  border: 1px solid white;
}

.web.pages {
  padding: 1.6em 1em;
}

ul {
  padding-inline-start: 1em;
}

ul,
ol {
  margin-block-start: 0.5em;
  margin-block-end: 0.5em;
}

h3 + ul {
  padding-inline-start: 0;
  list-style-type: none;
  margin-top: 3px;
}

				</style>
			</head>
			
			<body class=\\"document\\">
				<div class=\\"pages pdf\\">
					<div class=\\"page\\" id=\\"p1\\"><h1 id=\\"max-clayton-clowes\\">Max Clayton Clowes</h1>
<p><a href=\\"mailto:contact@mcclowes.com\\">contact@mcclowes.com</a> · <a href=\\"tel:+447976136097\\">+44 (0) 7976 136 097</a> · <a href=\\"https://mcclowes.com\\">mcclowes.com</a></p>
<h2 id=\\"experience\\">Experience</h2>
<h3 id=\\"software-engineer-fe---pollen\\">Software Engineer (FE) <em>- Pollen</em></h3>
<p><em>December 2019 - Ongoing</em></p>
<p>Developed Pollen’s checkout and payment application (React/Next.js/GraphQL).</p>
<h3 id=\\"software-engineer-fe---workshare\\">Software Engineer (FE) <em>- Workshare</em></h3>
<p><em>August 2018 - November 2019</em></p>
<p>Built Transact, a document management &amp; sign-off web app (React/Redux). Collaborated with design to define roadmap. Trained junior team members and pioneered our best practices.</p>
<h3 id=\\"product-engineer--manager---codogo\\">Product Engineer &amp; Manager <em>- Codogo</em></h3>
<p><em>April 2016 - August 2018</em></p>
<p>Founded Codogo after winning several enterprise awards. Established an agency business, supporting development of our own product, Write. I personally:</p>
<ul>
<li>Designed and delivered products for 30+ clients ranging from the NHS to leading financial think-tanks.</li>
<li>Developed software, websites, web apps, and native apps, utilising a range of modern technologies.</li>
<li>Managed (Agile) and supported the growth of my small team.</li>
<li>Pitched to top investors, including being flown out to Y Combinator based on the strength of the Alpha of our product, Codogo Write.</li>
</ul>
<p></div> <div class=\\"page\\" id=\\"p2\\"></p>
<h3 id=\\"other-experience\\">Other Experience</h3>
<ul>
<li>Development &amp; Design Intern <em>- Akkroo, 2015</em></li>
<li>Design Contractor <em>- Ludifi, 2014</em></li>
<li>Design Contractor <em>- 4J Studios, 2013</em></li>
<li>Junior UX Designer <em>- Better Brief, 2012 - 2013</em></li>
<li>Project manager <em>- Godfreys.co, 2011 - 2012</em></li>
</ul>
<h2 id=\\"education\\">Education</h2>
<h3 id=\\"bsc-hons-computer-science-21---durham-university\\">BSc (Hons) Computer Science, 2:1 <em>- Durham University</em></h3>
<p><em>2012 - 2016</em><br>British Computing Society accredited. Awarded Rising Star of Research.<br>Dissertation: <em>The use of evolutionary AI in the balancing of competitive multiplayer games</em></p>
<h3 id=\\"ba-interaction-design-year-1---ravensbourne-college-of-design\\">BA Interaction Design (Year 1) <em>- Ravensbourne College of Design</em></h3>
<p><em>2011 - 2012</em></p>
<h3 id=\\"foundation-diploma-in-art-and-design---london-college-of-communication\\">Foundation Diploma in Art and Design <em>- London College of Communication</em></h3>
<p><em>2010 - 2011</em><br>Graphic Design pathway</p>
<h3 id=\\"high-school---city-of-london-school\\">High School <em>- City of London School</em></h3>
<p><em>2003 - 2010</em><br>A levels: <em>Physics, Economics, Music</em></p>
<h3 id=\\"other-training\\">Other Training</h3>
<ul>
<li>Project Management <em>- SuperHi, 2019</em></li>
<li>Advanced iOS Development <em>- City University, 2012</em></li>
<li>Adva nced C Programming <em>- City University, 2011</em></li>
</ul>
<h2 id=\\"about-me\\">About Me</h2>
<p>Regularly attend PM conferences &amp; meet-ups <em>(Elevate, Product School)</em>. Regularly attend developer meet-ups <em>(React London, GitHub Universe, Next Conf)</em>. Currently work mainly with React <em>(ES6)</em>.</p>
<p>Runner (1st marathon coming up in December), cyclist, rock climber, and dancer (1st place university circuit). Singer and multi-instrumentalist.</p>
</div>
				</div>
			</body>
		</html>
	"
`;

exports[`generateHtml for website 1`] = `
"
		<html>
			<head>
        
    <title>Joe Bloggs CV</title>
    <meta name=\\"description\\" content=\\"Enter a summary of you here.\\">

    <meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1,maximum-scale=2,shrink-to-fit=no\\">

    <link rel=\\"icon\\" href=\\"/favicon.ico\\" />

    <!--  Social tags -->
    <!--  Essential META Tags -->
    <meta property=\\"og:title\\" content=\\"The CV of Joe Bloggs\\">
    <meta property=\\"og:description\\" content=\\"Enter a summary of you here.\\">
    <meta property=\\"og:image\\" content=\\"https://cv.joebloggs.com/preview.png\\">
    <meta property=\\"og:url\\" content=\\"https://cv.joebloggs.com/\\">
    <meta name=\\"twitter:card\\" content=\\"summary_large_image\\">


    <!--  Non-Essential, But Recommended -->
    <meta property=\\"og:site_name\\" content=\\"The CV of Joe Bloggs\\">
    <meta name=\\"twitter:image:alt\\" content=\\"Joe Bloggs CV\\">


    <!--  Non-Essential, But Required for Analytics -->
    <meta name=\\"twitter:site\\" content=\\"@joebloggs\\">
  

				<style>
					@media (prefers-color-scheme: light) {
  :root {
    --white: #ffffff;
    --primary-light: #8ee3c6;
    --primary: #437868;
    --primary-dark: #2e5a4d;
    --gray: #666;
    --black: #171d1b;
  }
}
@media (prefers-color-scheme: dark) {
  :root {
    --white: #18191a;
    --primary-light: #dda1b7;
    --primary: #dda1b7;
    --primary-dark: #dda1b7;
    --gray: #ccc;
    --black: #ffffff;
  }
}

html,
body {
  padding: 0;
  margin: 0;
  color: var(--black);
  background-color: var(--white);
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

* {
  box-sizing: border-box;
}

body {
  display: flex;
  align-items: center;
  justify-content: center;
}

h1,
h2,
h3,
h4,
p,
li {
  font-family: avenir next, helvetica, sans-serif;
  color: var(--black);
}

h1,
h2,
h3,
h4 {
}

h1 {
  margin: 0;
}

h1 + p {
  margin-top: 3px;
}

h2 {
  border-bottom: 2px solid var(--black);
  display: flex;
  margin-block-start: 1em;
  padding-bottom: 0.3em;
}

h3 {
  margin-block-start: 1em;
  color: var(--primary-dark);
}

h3 em {
  font-style: normal;
  font-weight: lighter;
}

h4 {
  color: var(--primary-dark);
  font-weight: normal;
}

h3,
h4 {
  margin-block-end: 3px;
}

h3 + p,
h3 + h4,
h4 + p {
  margin-block-start: 3px;
}

h3 + p {
  margin-block-end: 3px;
}

h3 + p + p {
  margin-block-start: 3px;
}

a {
  text-decoration: none;
  color: var(--primary);
}

a:hover {
  text-decoration: underline;
  opacity: 0.75;
}

em {
  color: var(--gray);
}

strong {
  color: var(--primary-dark);
}

blockquote {
  color: var(--primary-light);
}

hr {
  opacity: 0.2;
}

@page {
  margin: 0;
}

.pages.web {
  max-width: 700px;
}

.page {
  position: relative;
  box-sizing: border-box;
  overflow: hidden;
}

.pdf .page,
.debug .page {
  height: 279.4mm;
  width: 215.9mm;
  text-rendering: optimizeLegibility;
  page-break-before: always;
  page-break-after: always;
  padding: 1cm 1.7cm;
  padding-bottom: 1.5cm;
}

.debug .page {
  border: 1px solid white;
}

.web.pages {
  padding: 1.6em 1em;
}

ul {
  padding-inline-start: 1em;
}

ul,
ol {
  margin-block-start: 0.5em;
  margin-block-end: 0.5em;
}

h3 + ul {
  padding-inline-start: 0;
  list-style-type: none;
  margin-top: 3px;
}

				</style>
			</head>
			
			<body class=\\"document\\">
				<div class=\\"pages pdf\\">
					<div class=\\"page\\" id=\\"p1\\"><h1 id=\\"max-clayton-clowes\\">Max Clayton Clowes</h1>
<p><a href=\\"mailto:contact@mcclowes.com\\">contact@mcclowes.com</a> · <a href=\\"tel:+447976136097\\">+44 (0) 7976 136 097</a> · <a href=\\"https://mcclowes.com\\">mcclowes.com</a></p>
<h2 id=\\"experience\\">Experience</h2>
<h3 id=\\"software-engineer-fe---pollen\\">Software Engineer (FE) <em>- Pollen</em></h3>
<p><em>December 2019 - Ongoing</em></p>
<p>Developed Pollen’s checkout and payment application (React/Next.js/GraphQL).</p>
<h3 id=\\"software-engineer-fe---workshare\\">Software Engineer (FE) <em>- Workshare</em></h3>
<p><em>August 2018 - November 2019</em></p>
<p>Built Transact, a document management &amp; sign-off web app (React/Redux). Collaborated with design to define roadmap. Trained junior team members and pioneered our best practices.</p>
<h3 id=\\"product-engineer--manager---codogo\\">Product Engineer &amp; Manager <em>- Codogo</em></h3>
<p><em>April 2016 - August 2018</em></p>
<p>Founded Codogo after winning several enterprise awards. Established an agency business, supporting development of our own product, Write. I personally:</p>
<ul>
<li>Designed and delivered products for 30+ clients ranging from the NHS to leading financial think-tanks.</li>
<li>Developed software, websites, web apps, and native apps, utilising a range of modern technologies.</li>
<li>Managed (Agile) and supported the growth of my small team.</li>
<li>Pitched to top investors, including being flown out to Y Combinator based on the strength of the Alpha of our product, Codogo Write.</li>
</ul>
<p></div> <div class=\\"page\\" id=\\"p2\\"></p>
<h3 id=\\"other-experience\\">Other Experience</h3>
<ul>
<li>Development &amp; Design Intern <em>- Akkroo, 2015</em></li>
<li>Design Contractor <em>- Ludifi, 2014</em></li>
<li>Design Contractor <em>- 4J Studios, 2013</em></li>
<li>Junior UX Designer <em>- Better Brief, 2012 - 2013</em></li>
<li>Project manager <em>- Godfreys.co, 2011 - 2012</em></li>
</ul>
<h2 id=\\"education\\">Education</h2>
<h3 id=\\"bsc-hons-computer-science-21---durham-university\\">BSc (Hons) Computer Science, 2:1 <em>- Durham University</em></h3>
<p><em>2012 - 2016</em><br>British Computing Society accredited. Awarded Rising Star of Research.<br>Dissertation: <em>The use of evolutionary AI in the balancing of competitive multiplayer games</em></p>
<h3 id=\\"ba-interaction-design-year-1---ravensbourne-college-of-design\\">BA Interaction Design (Year 1) <em>- Ravensbourne College of Design</em></h3>
<p><em>2011 - 2012</em></p>
<h3 id=\\"foundation-diploma-in-art-and-design---london-college-of-communication\\">Foundation Diploma in Art and Design <em>- London College of Communication</em></h3>
<p><em>2010 - 2011</em><br>Graphic Design pathway</p>
<h3 id=\\"high-school---city-of-london-school\\">High School <em>- City of London School</em></h3>
<p><em>2003 - 2010</em><br>A levels: <em>Physics, Economics, Music</em></p>
<h3 id=\\"other-training\\">Other Training</h3>
<ul>
<li>Project Management <em>- SuperHi, 2019</em></li>
<li>Advanced iOS Development <em>- City University, 2012</em></li>
<li>Adva nced C Programming <em>- City University, 2011</em></li>
</ul>
<h2 id=\\"about-me\\">About Me</h2>
<p>Regularly attend PM conferences &amp; meet-ups <em>(Elevate, Product School)</em>. Regularly attend developer meet-ups <em>(React London, GitHub Universe, Next Conf)</em>. Currently work mainly with React <em>(ES6)</em>.</p>
<p>Runner (1st marathon coming up in December), cyclist, rock climber, and dancer (1st place university circuit). Singer and multi-instrumentalist.</p>
</div>
				</div>
			</body>
		</html>
	"
`;

exports[`generateHtml with array 1`] = `
"
		<html>
			<head>
        
    <title>Joe Bloggs CV</title>
    <meta name=\\"description\\" content=\\"Enter a summary of you here.\\">

    <meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1,maximum-scale=2,shrink-to-fit=no\\">

    <link rel=\\"icon\\" href=\\"/favicon.ico\\" />

    <!--  Social tags -->
    <!--  Essential META Tags -->
    <meta property=\\"og:title\\" content=\\"The CV of Joe Bloggs\\">
    <meta property=\\"og:description\\" content=\\"Enter a summary of you here.\\">
    <meta property=\\"og:image\\" content=\\"https://cv.joebloggs.com/preview.png\\">
    <meta property=\\"og:url\\" content=\\"https://cv.joebloggs.com/\\">
    <meta name=\\"twitter:card\\" content=\\"summary_large_image\\">


    <!--  Non-Essential, But Recommended -->
    <meta property=\\"og:site_name\\" content=\\"The CV of Joe Bloggs\\">
    <meta name=\\"twitter:image:alt\\" content=\\"Joe Bloggs CV\\">


    <!--  Non-Essential, But Required for Analytics -->
    <meta name=\\"twitter:site\\" content=\\"@joebloggs\\">
  

				<style>
					@media (prefers-color-scheme: light) {
  :root {
    --white: #ffffff;
    --primary-light: #8ee3c6;
    --primary: #437868;
    --primary-dark: #2e5a4d;
    --gray: #666;
    --black: #171d1b;
  }
}
@media (prefers-color-scheme: dark) {
  :root {
    --white: #18191a;
    --primary-light: #dda1b7;
    --primary: #dda1b7;
    --primary-dark: #dda1b7;
    --gray: #ccc;
    --black: #ffffff;
  }
}

html,
body {
  padding: 0;
  margin: 0;
  color: var(--black);
  background-color: var(--white);
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

* {
  box-sizing: border-box;
}

body {
  display: flex;
  align-items: center;
  justify-content: center;
}

h1,
h2,
h3,
h4,
p,
li {
  font-family: avenir next, helvetica, sans-serif;
  color: var(--black);
}

h1,
h2,
h3,
h4 {
}

h1 {
  margin: 0;
}

h1 + p {
  margin-top: 3px;
}

h2 {
  border-bottom: 2px solid var(--black);
  display: flex;
  margin-block-start: 1em;
  padding-bottom: 0.3em;
}

h3 {
  margin-block-start: 1em;
  color: var(--primary-dark);
}

h3 em {
  font-style: normal;
  font-weight: lighter;
}

h4 {
  color: var(--primary-dark);
  font-weight: normal;
}

h3,
h4 {
  margin-block-end: 3px;
}

h3 + p,
h3 + h4,
h4 + p {
  margin-block-start: 3px;
}

h3 + p {
  margin-block-end: 3px;
}

h3 + p + p {
  margin-block-start: 3px;
}

a {
  text-decoration: none;
  color: var(--primary);
}

a:hover {
  text-decoration: underline;
  opacity: 0.75;
}

em {
  color: var(--gray);
}

strong {
  color: var(--primary-dark);
}

blockquote {
  color: var(--primary-light);
}

hr {
  opacity: 0.2;
}

@page {
  margin: 0;
}

.pages.web {
  max-width: 700px;
}

.page {
  position: relative;
  box-sizing: border-box;
  overflow: hidden;
}

.pdf .page,
.debug .page {
  height: 279.4mm;
  width: 215.9mm;
  text-rendering: optimizeLegibility;
  page-break-before: always;
  page-break-after: always;
  padding: 1cm 1.7cm;
  padding-bottom: 1.5cm;
}

.debug .page {
  border: 1px solid white;
}

.web.pages {
  padding: 1.6em 1em;
}

ul {
  padding-inline-start: 1em;
}

ul,
ol {
  margin-block-start: 0.5em;
  margin-block-end: 0.5em;
}

h3 + ul {
  padding-inline-start: 0;
  list-style-type: none;
  margin-top: 3px;
}

				</style>
			</head>
			
			<body class=\\"document\\">
				<div class=\\"pages pdf\\">
					<div class=\\"page\\" id=\\"p1\\"><h1 id=\\"max-clayton-clowes\\">Max Clayton Clowes</h1>
<p><a href=\\"mailto:contact@mcclowes.com\\">contact@mcclowes.com</a> · <a href=\\"tel:+447976136097\\">+44 (0) 7976 136 097</a> · <a href=\\"https://mcclowes.com\\">mcclowes.com</a></p>
<h2 id=\\"experience\\">Experience</h2>
<h3 id=\\"software-engineer-fe---pollen\\">Software Engineer (FE) <em>- Pollen</em></h3>
<p><em>December 2019 - Ongoing</em></p>
<p>Developed Pollen’s checkout and payment application (React/Next.js/GraphQL).</p>
<h3 id=\\"software-engineer-fe---workshare\\">Software Engineer (FE) <em>- Workshare</em></h3>
<p><em>August 2018 - November 2019</em></p>
<p>Built Transact, a document management &amp; sign-off web app (React/Redux). Collaborated with design to define roadmap. Trained junior team members and pioneered our best practices.</p>
<h3 id=\\"product-engineer--manager---codogo\\">Product Engineer &amp; Manager <em>- Codogo</em></h3>
<p><em>April 2016 - August 2018</em></p>
<p>Founded Codogo after winning several enterprise awards. Established an agency business, supporting development of our own product, Write. I personally:</p>
<ul>
<li>Designed and delivered products for 30+ clients ranging from the NHS to leading financial think-tanks.</li>
<li>Developed software, websites, web apps, and native apps, utilising a range of modern technologies.</li>
<li>Managed (Agile) and supported the growth of my small team.</li>
<li>Pitched to top investors, including being flown out to Y Combinator based on the strength of the Alpha of our product, Codogo Write.</li>
</ul>
<p></div> <div class=\\"page\\" id=\\"p2\\"></p>
<h3 id=\\"other-experience\\">Other Experience</h3>
<ul>
<li>Development &amp; Design Intern <em>- Akkroo, 2015</em></li>
<li>Design Contractor <em>- Ludifi, 2014</em></li>
<li>Design Contractor <em>- 4J Studios, 2013</em></li>
<li>Junior UX Designer <em>- Better Brief, 2012 - 2013</em></li>
<li>Project manager <em>- Godfreys.co, 2011 - 2012</em></li>
</ul>
<h2 id=\\"education\\">Education</h2>
<h3 id=\\"bsc-hons-computer-science-21---durham-university\\">BSc (Hons) Computer Science, 2:1 <em>- Durham University</em></h3>
<p><em>2012 - 2016</em><br>British Computing Society accredited. Awarded Rising Star of Research.<br>Dissertation: <em>The use of evolutionary AI in the balancing of competitive multiplayer games</em></p>
<h3 id=\\"ba-interaction-design-year-1---ravensbourne-college-of-design\\">BA Interaction Design (Year 1) <em>- Ravensbourne College of Design</em></h3>
<p><em>2011 - 2012</em></p>
<h3 id=\\"foundation-diploma-in-art-and-design---london-college-of-communication\\">Foundation Diploma in Art and Design <em>- London College of Communication</em></h3>
<p><em>2010 - 2011</em><br>Graphic Design pathway</p>
<h3 id=\\"high-school---city-of-london-school\\">High School <em>- City of London School</em></h3>
<p><em>2003 - 2010</em><br>A levels: <em>Physics, Economics, Music</em></p>
<h3 id=\\"other-training\\">Other Training</h3>
<ul>
<li>Project Management <em>- SuperHi, 2019</em></li>
<li>Advanced iOS Development <em>- City University, 2012</em></li>
<li>Adva nced C Programming <em>- City University, 2011</em></li>
</ul>
<h2 id=\\"about-me\\">About Me</h2>
<p>Regularly attend PM conferences &amp; meet-ups <em>(Elevate, Product School)</em>. Regularly attend developer meet-ups <em>(React London, GitHub Universe, Next Conf)</em>. Currently work mainly with React <em>(ES6)</em>.</p>
<p>Runner (1st marathon coming up in December), cyclist, rock climber, and dancer (1st place university circuit). Singer and multi-instrumentalist.</p>
 <h1 id=\\"max-clayton-clowes\\">Max Clayton Clowes</h1>
<p><a href=\\"mailto:contact@mcclowes.com\\">contact@mcclowes.com</a> · <a href=\\"tel:+447976136097\\">+44 (0) 7976 136 097</a> · <a href=\\"https://mcclowes.com\\">mcclowes.com</a></p>
<h2 id=\\"experience\\">Experience</h2>
<h3 id=\\"software-engineer-fe---pollen\\">Software Engineer (FE) <em>- Pollen</em></h3>
<p><em>December 2019 - Ongoing</em></p>
<p>Developed Pollen’s checkout and payment application (React/Next.js/GraphQL).</p>
<h3 id=\\"software-engineer-fe---workshare\\">Software Engineer (FE) <em>- Workshare</em></h3>
<p><em>August 2018 - November 2019</em></p>
<p>Built Transact, a document management &amp; sign-off web app (React/Redux). Collaborated with design to define roadmap. Trained junior team members and pioneered our best practices.</p>
<h3 id=\\"product-engineer--manager---codogo\\">Product Engineer &amp; Manager <em>- Codogo</em></h3>
<p><em>April 2016 - August 2018</em></p>
<p>Founded Codogo after winning several enterprise awards. Established an agency business, supporting development of our own product, Write. I personally:</p>
<ul>
<li>Designed and delivered products for 30+ clients ranging from the NHS to leading financial think-tanks.</li>
<li>Developed software, websites, web apps, and native apps, utilising a range of modern technologies.</li>
<li>Managed (Agile) and supported the growth of my small team.</li>
<li>Pitched to top investors, including being flown out to Y Combinator based on the strength of the Alpha of our product, Codogo Write.</li>
</ul>
<p></div> <div class=\\"page\\" id=\\"p3\\"></p>
<h3 id=\\"other-experience\\">Other Experience</h3>
<ul>
<li>Development &amp; Design Intern <em>- Akkroo, 2015</em></li>
<li>Design Contractor <em>- Ludifi, 2014</em></li>
<li>Design Contractor <em>- 4J Studios, 2013</em></li>
<li>Junior UX Designer <em>- Better Brief, 2012 - 2013</em></li>
<li>Project manager <em>- Godfreys.co, 2011 - 2012</em></li>
</ul>
<h2 id=\\"education\\">Education</h2>
<h3 id=\\"bsc-hons-computer-science-21---durham-university\\">BSc (Hons) Computer Science, 2:1 <em>- Durham University</em></h3>
<p><em>2012 - 2016</em><br>British Computing Society accredited. Awarded Rising Star of Research.<br>Dissertation: <em>The use of evolutionary AI in the balancing of competitive multiplayer games</em></p>
<h3 id=\\"ba-interaction-design-year-1---ravensbourne-college-of-design\\">BA Interaction Design (Year 1) <em>- Ravensbourne College of Design</em></h3>
<p><em>2011 - 2012</em></p>
<h3 id=\\"foundation-diploma-in-art-and-design---london-college-of-communication\\">Foundation Diploma in Art and Design <em>- London College of Communication</em></h3>
<p><em>2010 - 2011</em><br>Graphic Design pathway</p>
<h3 id=\\"high-school---city-of-london-school\\">High School <em>- City of London School</em></h3>
<p><em>2003 - 2010</em><br>A levels: <em>Physics, Economics, Music</em></p>
<h3 id=\\"other-training\\">Other Training</h3>
<ul>
<li>Project Management <em>- SuperHi, 2019</em></li>
<li>Advanced iOS Development <em>- City University, 2012</em></li>
<li>Adva nced C Programming <em>- City University, 2011</em></li>
</ul>
<h2 id=\\"about-me\\">About Me</h2>
<p>Regularly attend PM conferences &amp; meet-ups <em>(Elevate, Product School)</em>. Regularly attend developer meet-ups <em>(React London, GitHub Universe, Next Conf)</em>. Currently work mainly with React <em>(ES6)</em>.</p>
<p>Runner (1st marathon coming up in December), cyclist, rock climber, and dancer (1st place university circuit). Singer and multi-instrumentalist.</p>
</div>
				</div>
			</body>
		</html>
	"
`;

exports[`generateHtml with standard options 1`] = `
"
		<html>
			<head>
        
    <title>Joe Bloggs CV</title>
    <meta name=\\"description\\" content=\\"Enter a summary of you here.\\">

    <meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1,maximum-scale=2,shrink-to-fit=no\\">

    <link rel=\\"icon\\" href=\\"/favicon.ico\\" />

    <!--  Social tags -->
    <!--  Essential META Tags -->
    <meta property=\\"og:title\\" content=\\"The CV of Joe Bloggs\\">
    <meta property=\\"og:description\\" content=\\"Enter a summary of you here.\\">
    <meta property=\\"og:image\\" content=\\"https://cv.joebloggs.com/preview.png\\">
    <meta property=\\"og:url\\" content=\\"https://cv.joebloggs.com/\\">
    <meta name=\\"twitter:card\\" content=\\"summary_large_image\\">


    <!--  Non-Essential, But Recommended -->
    <meta property=\\"og:site_name\\" content=\\"The CV of Joe Bloggs\\">
    <meta name=\\"twitter:image:alt\\" content=\\"Joe Bloggs CV\\">


    <!--  Non-Essential, But Required for Analytics -->
    <meta name=\\"twitter:site\\" content=\\"@joebloggs\\">
  

				<style>
					@media (prefers-color-scheme: light) {
  :root {
    --white: #ffffff;
    --primary-light: #8ee3c6;
    --primary: #437868;
    --primary-dark: #2e5a4d;
    --gray: #666;
    --black: #171d1b;
  }
}
@media (prefers-color-scheme: dark) {
  :root {
    --white: #18191a;
    --primary-light: #dda1b7;
    --primary: #dda1b7;
    --primary-dark: #dda1b7;
    --gray: #ccc;
    --black: #ffffff;
  }
}

html,
body {
  padding: 0;
  margin: 0;
  color: var(--black);
  background-color: var(--white);
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

* {
  box-sizing: border-box;
}

body {
  display: flex;
  align-items: center;
  justify-content: center;
}

h1,
h2,
h3,
h4,
p,
li {
  font-family: avenir next, helvetica, sans-serif;
  color: var(--black);
}

h1,
h2,
h3,
h4 {
}

h1 {
  margin: 0;
}

h1 + p {
  margin-top: 3px;
}

h2 {
  border-bottom: 2px solid var(--black);
  display: flex;
  margin-block-start: 1em;
  padding-bottom: 0.3em;
}

h3 {
  margin-block-start: 1em;
  color: var(--primary-dark);
}

h3 em {
  font-style: normal;
  font-weight: lighter;
}

h4 {
  color: var(--primary-dark);
  font-weight: normal;
}

h3,
h4 {
  margin-block-end: 3px;
}

h3 + p,
h3 + h4,
h4 + p {
  margin-block-start: 3px;
}

h3 + p {
  margin-block-end: 3px;
}

h3 + p + p {
  margin-block-start: 3px;
}

a {
  text-decoration: none;
  color: var(--primary);
}

a:hover {
  text-decoration: underline;
  opacity: 0.75;
}

em {
  color: var(--gray);
}

strong {
  color: var(--primary-dark);
}

blockquote {
  color: var(--primary-light);
}

hr {
  opacity: 0.2;
}

@page {
  margin: 0;
}

.pages.web {
  max-width: 700px;
}

.page {
  position: relative;
  box-sizing: border-box;
  overflow: hidden;
}

.pdf .page,
.debug .page {
  height: 279.4mm;
  width: 215.9mm;
  text-rendering: optimizeLegibility;
  page-break-before: always;
  page-break-after: always;
  padding: 1cm 1.7cm;
  padding-bottom: 1.5cm;
}

.debug .page {
  border: 1px solid white;
}

.web.pages {
  padding: 1.6em 1em;
}

ul {
  padding-inline-start: 1em;
}

ul,
ol {
  margin-block-start: 0.5em;
  margin-block-end: 0.5em;
}

h3 + ul {
  padding-inline-start: 0;
  list-style-type: none;
  margin-top: 3px;
}

				</style>
			</head>
			
			<body class=\\"document\\">
				<div class=\\"pages pdf\\">
					<div class=\\"page\\" id=\\"p1\\"><h1 id=\\"max-clayton-clowes\\">Max Clayton Clowes</h1>
<p><a href=\\"mailto:contact@mcclowes.com\\">contact@mcclowes.com</a> · <a href=\\"tel:+447976136097\\">+44 (0) 7976 136 097</a> · <a href=\\"https://mcclowes.com\\">mcclowes.com</a></p>
<h2 id=\\"experience\\">Experience</h2>
<h3 id=\\"software-engineer-fe---pollen\\">Software Engineer (FE) <em>- Pollen</em></h3>
<p><em>December 2019 - Ongoing</em></p>
<p>Developed Pollen’s checkout and payment application (React/Next.js/GraphQL).</p>
<h3 id=\\"software-engineer-fe---workshare\\">Software Engineer (FE) <em>- Workshare</em></h3>
<p><em>August 2018 - November 2019</em></p>
<p>Built Transact, a document management &amp; sign-off web app (React/Redux). Collaborated with design to define roadmap. Trained junior team members and pioneered our best practices.</p>
<h3 id=\\"product-engineer--manager---codogo\\">Product Engineer &amp; Manager <em>- Codogo</em></h3>
<p><em>April 2016 - August 2018</em></p>
<p>Founded Codogo after winning several enterprise awards. Established an agency business, supporting development of our own product, Write. I personally:</p>
<ul>
<li>Designed and delivered products for 30+ clients ranging from the NHS to leading financial think-tanks.</li>
<li>Developed software, websites, web apps, and native apps, utilising a range of modern technologies.</li>
<li>Managed (Agile) and supported the growth of my small team.</li>
<li>Pitched to top investors, including being flown out to Y Combinator based on the strength of the Alpha of our product, Codogo Write.</li>
</ul>
<p></div> <div class=\\"page\\" id=\\"p2\\"></p>
<h3 id=\\"other-experience\\">Other Experience</h3>
<ul>
<li>Development &amp; Design Intern <em>- Akkroo, 2015</em></li>
<li>Design Contractor <em>- Ludifi, 2014</em></li>
<li>Design Contractor <em>- 4J Studios, 2013</em></li>
<li>Junior UX Designer <em>- Better Brief, 2012 - 2013</em></li>
<li>Project manager <em>- Godfreys.co, 2011 - 2012</em></li>
</ul>
<h2 id=\\"education\\">Education</h2>
<h3 id=\\"bsc-hons-computer-science-21---durham-university\\">BSc (Hons) Computer Science, 2:1 <em>- Durham University</em></h3>
<p><em>2012 - 2016</em><br>British Computing Society accredited. Awarded Rising Star of Research.<br>Dissertation: <em>The use of evolutionary AI in the balancing of competitive multiplayer games</em></p>
<h3 id=\\"ba-interaction-design-year-1---ravensbourne-college-of-design\\">BA Interaction Design (Year 1) <em>- Ravensbourne College of Design</em></h3>
<p><em>2011 - 2012</em></p>
<h3 id=\\"foundation-diploma-in-art-and-design---london-college-of-communication\\">Foundation Diploma in Art and Design <em>- London College of Communication</em></h3>
<p><em>2010 - 2011</em><br>Graphic Design pathway</p>
<h3 id=\\"high-school---city-of-london-school\\">High School <em>- City of London School</em></h3>
<p><em>2003 - 2010</em><br>A levels: <em>Physics, Economics, Music</em></p>
<h3 id=\\"other-training\\">Other Training</h3>
<ul>
<li>Project Management <em>- SuperHi, 2019</em></li>
<li>Advanced iOS Development <em>- City University, 2012</em></li>
<li>Adva nced C Programming <em>- City University, 2011</em></li>
</ul>
<h2 id=\\"about-me\\">About Me</h2>
<p>Regularly attend PM conferences &amp; meet-ups <em>(Elevate, Product School)</em>. Regularly attend developer meet-ups <em>(React London, GitHub Universe, Next Conf)</em>. Currently work mainly with React <em>(ES6)</em>.</p>
<p>Runner (1st marathon coming up in December), cyclist, rock climber, and dancer (1st place university circuit). Singer and multi-instrumentalist.</p>
</div>
				</div>
			</body>
		</html>
	"
`;
